# nightwing

./: README.md  nightwing.repos
nightwing/example_component/: CMakeLists.txt  package.xml
nightwing/example_component/launch/: example_launch.py
nightwing/example_component/src/: listener.cpp
nightwing/nightwing_data/: CMakeLists.txt  package.xml
nightwing/nightwing_data/config/: default_log_topics.yaml
nightwing/nightwing_data/include/nightwing_data/: rgbd_sync_store.hpp  zed_rgb_converter.hpp
nightwing/nightwing_data/launch/: decompress_etl.launch.py  log_data.launch.py
nightwing/nightwing_data/scripts/: decompress_etl_entrypoint.sh
nightwing/nightwing_data/src/: rgbd_sync_store.cpp  zed_rgb_converter.cpp
nightwing/nightwing_example_package/: package.xml
nightwing/nightwing_example_package/include/example_component/: listener.hpp  talker.hpp
nightwing/nightwing_example_package/launch/: example_launch.py
nightwing/nightwing_example_package/src/: talker.cpp
nightwing/nightwing_platform/: CMakeLists.txt  README.md  package.xml
nightwing/nightwing_platform/config/perception/: realsense.yaml  zed2.yaml  zed_common.yaml
nightwing/nightwing_platform/launch/: base.launch.py  camera.launch.py  zed_camera.launch.py
nightwing/nightwing_vio/: CMakeLists.txt  package.xml
nightwing/nightwing_vio/include/nightwing_vio/backend/: factor_graph_manager.hpp  vio_backend_component.hpp
nightwing/nightwing_vio/include/nightwing_vio/common/: vio_types.hpp
nightwing/nightwing_vio/include/nightwing_vio/frontend/: imu_frontend.hpp
nightwing/nightwing_vio/src/frontend/: imu_frontend.cpp
nightwing/nightwing_vio/test/: test_imu_frontend.cpp
nightwing/nightwing_vio/test/data/: imu_params.yaml
nightwing/platform_common/: CMakeLists.txt  README.md  package.xml
nightwing/platform_common/config/: log_topics.yaml
nightwing/platform_common/config/data/: default_log_topics.yaml
nightwing/platform_common/config/perception/: realsense.yaml
nightwing/platform_common/config/vision/: realsense.yaml
nightwing/platform_common/launch/: base.launch.py  base_launch.py  camera.launch.py
